layout/svg/nsSVGPathGeometryFrame.cpp
@@ -611,9 +611,11 @@ nsSVGPathGeometryFrame::Render(nsRenderingContext *aContext,
     // is actually okay, since we know that doesn't matter in the
     // SVGAutoRenderState::CLIP case (at least for the current implementation).
     gfxContextMatrixAutoSaveRestore autoSaveRestore;
-    if (renderMode != SVGAutoRenderState::CLIP) {
+    // For now revent back to doing the save even for CLIP to fix bug 959128.
+    // Undo in bug 987193.
+    //if (renderMode != SVGAutoRenderState::CLIP) {
       autoSaveRestore.SetContext(gfx);
-    }
+    //}
 
     GeneratePath(gfx, ToMatrix(GetCanvasTM(FOR_PAINTING, aTransformRoot)));
 
